--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 Name: Kevin Corder, PhD Student
 markdown: kramdown
+highlighter: rouge
 permalink: /blog/:year/:month/:day/:title
 plugins:
   - jekyll-sitemap
