--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,10 @@
 Name: Kevin Corder, PhD Student
 markdown: kramdown
-highlighter: rouge
+
+kramdown: 
+  input: GFM
+  syntax_highlighter: rouge 
+
 permalink: /blog/:year/:month/:day/:title
 plugins:
   - jekyll-sitemap
