--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,6 @@
 Name: Kevin Corder, PhD Student
 markdown: kramdown
-
-kramdown: 
-  input: GFM
-  syntax_highlighter: rouge 
-
+highlighter: rouge 
 permalink: /blog/:year/:month/:day/:title
 plugins:
   - jekyll-sitemap
