--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,8 @@ highlighter: rouge
 permalink: /blog/:year/:month/:day/:title
 plugins:
   - jekyll-sitemap
+kramdown:
+  input: GFM
+  hard_wrap: false
+  syntax_highlighter: rouge
+  extensions: fenced_code_blocks
