--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 Name: Kevin Corder, PhD Student
 markdown: kramdown
-highlighter: rouge
 permalink: /blog/:year/:month/:day/:title
 plugins:
   - jekyll-sitemap
+
+highlighter: rouge
 kramdown:
   input: GFM
-  hard_wrap: false
+  auto_ids: true
   syntax_highlighter: rouge
-  extensions: fenced_code_blocks
